@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentCommandLineParser" version="1.4.3" targetFramework="net452" />
-  <package id="NLog" version="4.0.1" targetFramework="net46" />
+  <package id="NLog" version="4.2.1" targetFramework="net46" />
 </packages>
